--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -30,7 +30,6 @@
         }
         article {
             #chicaLeyendo {
-                height: 450px;
                 width: 300px;
             }
         
@@ -82,8 +81,7 @@
         article {
             @include flex-row-center;
             #chicaLeyendo {
-                height: 500px;
-                width: 350px;
+                width: 400px;
                 margin-bottom: 20px;
             }
         
@@ -149,8 +147,7 @@
     
     .card {
         width: 23%;
-        height: 750px;
-        margin: auto;
+        height: 700px;
         margin-top: 20px;
         margin-bottom: 30px;
         
@@ -195,12 +192,15 @@
     }
 
     .suscripciones .card {
-        height: 600px;
+        height: 550px;
         width: 23%;
         margin: auto;
         margin-top: 20px;
         margin-bottom: 50px;
 
+        .card-title {
+            margin-top: 40px;
+        }
         .card-text {
             font-size: large;
         }
