--- a/sass/paginas/_contacto.scss
+++ b/sass/paginas/_contacto.scss
@@ -49,6 +49,11 @@
         justify-content: space-evenly;
         .logoRedes {
             width: 40px;
+            transition: 1s;
+            &:hover {
+                transform: scale(1.1);
+                transition: 1s;
+            }
         }
     }
 }
